--- a/public/package.json
+++ b/public/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.4.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.2",
+    "socket.io-client": "^4.5.3",
     "styled-components": "^5.3.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
